--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,19 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
+   /* 解析*/
     compile 'com.google.code.gson:gson:2.8.0'
+   /* 控件注解*/
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    /*retrofit*/
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    /*retrofit使用rxjava方法*/
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+    /*glide图片处理库*/
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    /*rxjava rxandroid*/
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.1'
 }
